// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`badge prop 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text-wrapper"><span class="van-tab__text van-tab__text--ellipsis"></span>
        <div class="van-info">10</div>
        </span></div>
      <div class="van-tabs__line"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
  </div>
</div>
`;

exports[`border props 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div class="van-tabs__line"></div>
    </div>
  </div>
  <div class="van-tabs__content"></div>
</div>
`;

exports[`change tabs data 1`] = `
<div class="van-tabs van-tabs--line">
  <div>
    <div class="van-sticky">
      <div class="van-tabs__wrap">
        <div role="tablist" class="van-tabs__nav van-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
          <div class="van-tabs__line" style="background-color: rgb(238, 10, 36);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`change tabs data 2`] = `
<div class="van-tabs van-tabs--card">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--card" style="border-color: blue;">
      <div role="tab" aria-selected="true" class="van-tab van-tab--active" style="border-color: blue; background-color: blue;"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="van-tab" style="border-color: blue; color: blue;"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="van-tab van-tab--disabled" style="border-color: blue;"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
      <div class="van-tabs__line" style="transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane" style="">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="van-tab van-tab--active" aria-selected="true"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
      <div class="van-tabs__line" style="transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`dot prop 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text-wrapper"><span class="van-tab__text van-tab__text--ellipsis"></span>
        <div class="van-info van-info--dot"></div>
        </span></div>
      <div class="van-tabs__line"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
  </div>
</div>
`;

exports[`lazy render 1`] = `
<div class="van-tabs van-tabs--line">
  <div>
    <div class="van-sticky">
      <div class="van-tabs__wrap">
        <div role="tablist" class="van-tabs__nav van-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
          <div class="van-tabs__line" style="background-color: rgb(238, 10, 36);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`lazy render 2`] = `
<div class="van-tabs van-tabs--line">
  <div>
    <div class="van-sticky">
      <div class="van-tabs__wrap">
        <div role="tablist" class="van-tabs__nav van-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
          <div class="van-tabs__line" style="background-color: rgb(238, 10, 36); width: 2px; transform: translateX(0px) translateX(-50%);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">Text</div>
  </div>
</div>
`;

exports[`name prop 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
      <div class="van-tabs__line" style="transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane" style="">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`render empty tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
      <div class="van-tabs__line"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <!---->
    <!---->
  </div>
</div>
`;

exports[`render nav-left & nav-right slot 1`] = `
<div class="van-tabs van-tabs--line">
  <div>
    <div class="van-sticky">
      <div class="van-tabs__wrap">
        <div role="tablist" class="van-tabs__nav van-tabs__nav--line" style="border-color: #ee0a24;">Nav Left<div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
          <div class="van-tabs__line" style="background-color: rgb(238, 10, 36);"></div>Nav Right
        </div>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`rendered event 1`] = `<div role="tabpanel" class="van-tab__pane" style="">Text</div>`;

exports[`scrollspy prop 1`] = `
<div class="van-tabs van-tabs--line">
  <div>
    <div class="van-sticky">
      <div class="van-tabs__wrap">
        <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
          <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
          <div class="van-tabs__line" style="transform: translateX(0px) translateX(-50%);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane">Text</div>
  </div>
</div>
`;

exports[`scrollspy prop 2`] = `
<div class="van-tabs van-tabs--line">
  <div>
    <div class="van-sticky">
      <div class="van-tabs__wrap">
        <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
          <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
          <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
          <div role="tab" class="van-tab van-tab--active" aria-selected="true"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
          <div class="van-tabs__line" style="transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane">Text</div>
  </div>
</div>
`;

exports[`swipe to switch tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" aria-selected="true" class="van-tab van-tab--active"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
      <div class="van-tabs__line"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="van-tab van-tab--active" aria-selected="true"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
      <div class="van-tabs__line" style="transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 3`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist" class="van-tabs__nav van-tabs__nav--line">
      <div role="tab" class="van-tab"><span class="van-tab__text van-tab__text--ellipsis">title1</span></div>
      <div role="tab" class="van-tab van-tab--active" aria-selected="true"><span class="van-tab__text van-tab__text--ellipsis">title2</span></div>
      <div role="tab" class="van-tab van-tab--disabled"><span class="van-tab__text van-tab__text--ellipsis">title3</span></div>
      <div class="van-tabs__line" style="transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel" class="van-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="">Text</div>
    <div role="tabpanel" class="van-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;
